# sci-event-b2b

./: .gitignore  LICENSE  README.md  bootstrap.sh  docker-compose.yml
apps/b2c-api/: .coverage  .env.dev.example  .env.example  .env.test  Dockerfile  alembic.ini  openapi.yaml  pyproject.toml  spec.txt
apps/b2c-api/alembic/: env.py
apps/b2c-api/alembic/versions/: 001_initial.py  002_events_slots_talks.py  003_talks_speakers_json.py  004_notifications.py
apps/b2c-api/app/: config.py  database.py  dependencies.py  main.py
apps/b2c-api/app/models/: __init__.py  event.py  notification.py  otp_code.py  refresh_token.py  slot.py  talk.py  user.py  user_slot_selection.py
apps/b2c-api/app/routers/: auth.py  notifications.py  slots.py  talks.py  users.py
apps/b2c-api/app/schemas/: auth.py  notifications.py  slots.py  users.py
apps/b2c-api/app/services/: auth_service.py  slots_service.py  sms_service.py  users_service.py
apps/b2c-api/app/utils/: jwt.py  security.py
apps/b2c-api/scripts/: seed.py
apps/b2c-api/tests/: conftest.py  test_auth.py  test_notifications.py  test_slots.py  test_talks.py  test_users.py
nginx/: dev.conf
