[project]
name = "sci-event-b2c-api"
version = "0.1.0"
description = "SciEvent B2C REST API"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "PyJWT>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.9.0",
    "phonenumbers>=8.13.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
